--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -39,6 +39,15 @@ jobs:
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
 
+    - name: Install Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+    - name: Install NPM dependencies
+      run: npm ci
+    - name: Build assets
+      run: npm run build
+
     - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
       env:
         DB_CONNECTION: mysql
